--- a/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.css
+++ b/src/app/modules/docente-capacitador/register-notas/pages/register-notas/register-notas.component.css
@@ -1,32 +1,33 @@
-body{
-    margin-top:20px;
-    background:#FAFAFA;
+body {
+    margin-top: 20px;
+    background: #FAFAFA;
 }
+
 .order-card {
     color: #fff;
 }
 
 .bg-c-blue {
-    background: linear-gradient(45deg,#4099ff,#73b4ff);
+    background: linear-gradient(45deg, #4099ff, #73b4ff);
 }
 
 .bg-c-green {
-    background: linear-gradient(45deg,#2ed8b6,#59e0c5);
+    background: linear-gradient(45deg, #2ed8b6, #59e0c5);
 }
 
 .bg-c-yellow {
-    background: linear-gradient(45deg,#FFB64D,#ffcb80);
+    background: linear-gradient(45deg, #FFB64D, #ffcb80);
 }
 
 .bg-c-pink {
-    background: linear-gradient(45deg,#FF5370,#ff869a);
+    background: linear-gradient(45deg, #FF5370, #ff869a);
 }
 
 
 .card {
     border-radius: 10px;
-    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
-    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
     border: none;
     margin-bottom: 30px;
     -webkit-transition: all 0.3s ease-in-out;
@@ -48,15 +49,20 @@ body{
 .f-right {
     float: right;
 }
+
 .val {
-    font-size: 10px;
-  }
-  .col-md-4{
-  /* max-width: 70.333333%; */
-  min-width: 30%;
+    font-size: 14px;
+}
+.valn {
+    font-size: 15px;
+}
 
-  }
+.col-md-4 {
+    /* max-width: 70.333333%; */
+    min-width: 30%;
 
-  .sin-borde {
+}
+
+.sin-borde {
     border: none;
-  }
+}
