--- a/src/app/modules/docente-capacitador/register-participante/pages/register-participante/register-participante.component.html
+++ b/src/app/modules/docente-capacitador/register-participante/pages/register-participante/register-participante.component.html
@@ -6,7 +6,7 @@
             <div class="card bg-c-blue order-card"
                 (click)="showContainer2 = true; showContainer1 = false; mostrarFichas(curso.curId)">
                 <div class="card-block">
-                    <h6 class="m-b-20">Codigo: {{curso.curCodigo}}</h6>
+                    <h6 class="m-b-20">Código: {{curso.curCodigo}}</h6>
                     <h2 class="text-right"><i class="fa fa-graduation-cap f-left"></i><span>{{curso.curNombre}}</span>
                     </h2>
                     <div style="margin-bottom: 10px;">
@@ -27,7 +27,7 @@
     <nav aria-label="breadcrumb" class="main-breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a (click)="showContainer1 = true; showContainer2 = false;">Cursos</a></li>
-            <li class="breadcrumb-item"><a>Registrar Notas</a></li>
+            <li class="breadcrumb-item"><a>Registrar Participante</a></li>
         </ol>
     </nav>
     <!-- /Breadcrumb -->
@@ -49,8 +49,8 @@
                                     <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
                                 </svg>
                                 <h4>Participante</h4>
-                                <p class="text-secondary mb-1">{{fichaInscripcion.finPersona?.nombre}}
-                                    {{fichaInscripcion.finPersona?.apellido}}</p>
+                                <p class="text-secondary mb-1">{{fichaInscripcion.finPersona.nombre}}
+                                    {{fichaInscripcion.finPersona.apellido}}</p>
                             </div>
                         </div>
                     </div>
@@ -65,43 +65,43 @@
                         <form>
                             <div class="row mb-3">
                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Cedula</h6>
+                                    <h6 class="mb-0">Cédula</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputCedula"
                                         placeholder="Ingrese el nombre del programa" name="cedula"
-                                        value="{{fichaInscripcion.finPersona?.cedula}}">
+                                        value="{{fichaInscripcion.finPersona.cedula}}">
                                 </div>
                             </div>
 
                             <div class="row mb-3">
                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Correo</h6>
+                                    <h6 class="mb-0">Email</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputemail"
                                         placeholder="Ingrese la nota del 1er Parcial" name="email"
-                                        value="{{fichaInscripcion.finPersona?.email}}">
+                                        value="{{fichaInscripcion.finPersona.email}}">
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Direccion</h6>
+                                    <h6 class="mb-0">Dirección</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="direccion"
                                         placeholder="Ingrese la nota Final" name="direccion"
-                                        value="{{fichaInscripcion.finPersona?.direccion}}">
+                                        value="{{fichaInscripcion.finPersona.direccion}}">
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-sm-3">
-                                    <h6 class="mb-0">Telefono</h6>
+                                    <h6 class="mb-0">Teléfono</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="number" class="form-control" id="inputPromedio"
                                         placeholder="Ingrese la nota del 1er Parcial" name="promedio"
-                                        value="{{fichaInscripcion.finPersona?.telefono}}">
+                                        value="{{fichaInscripcion.finPersona.telefono}}">
                                 </div>
                             </div>
 
@@ -121,7 +121,7 @@
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
-                                    <Span></Span> <button (click)="actualizarficha(fichaInscripcion)">Guardar Cambios</button>
+                                    <Span></Span> <button type="button" class="btn btn-primary" (click)="actualizarficha(fichaInscripcion)">Guardar Cambios</button>
                                 </div>
                             </div>
                         </form>
@@ -139,10 +139,10 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Estudiante</th>
-                <th scope="col">Cedula</th>
-                <th scope="col">Nivel Academico</th>
+                <th scope="col">Cédula</th>
+                <th scope="col">Nivel Académico</th>
                 <th scope="col">Estado</th>
-                <th scope="col">editar</th>
+                <th scope="col">Editar</th>
             </tr>
         </thead>
         <tbody>
