--- a/src/app/modules/participantes/vista-perfil-participante/pages/vista-perfil-participante/vista-perfil-participante.component.html
+++ b/src/app/modules/participantes/vista-perfil-participante/pages/vista-perfil-participante/vista-perfil-participante.component.html
@@ -57,7 +57,7 @@
                                     <path fill-rule="evenodd"
                                         d="M11.5 1a.5.5 0 0 1 0-1h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V1.707l-3.45 3.45A4 4 0 0 1 8.5 10.97V13H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V14H6a.5.5 0 0 1 0-1h1.5v-2.03a4 4 0 1 1 3.471-6.648L14.293 1H11.5zm-.997 4.346a3 3 0 1 0-5.006 3.309 3 3 0 0 0 5.006-3.31z" />
                                 </svg>
-                                Genero
+                                Género
                             </h6>
                             <span class="text-secondary">{{persona.sexo}}</span>
                         </li>
@@ -93,7 +93,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-3">
-                                <h6 class="mb-0">Cedula</h6>
+                                <h6 class="mb-0">Cédula</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
                                 {{persona.cedula}}
@@ -111,7 +111,7 @@
                         <hr>
                         <div class="row">
                             <div class="col-sm-3">
-                                <h6 class="mb-0">Telefono:</h6>
+                                <h6 class="mb-0">Teléfono:</h6>
                             </div>
                             <div class="col-sm-9 text-secondary">
                                 {{persona.telefono}}
